@@ -1,3 +1,5 @@
+1707.	[contrib]	sdb/ldap updated to version 1.0-beta.
+
 1706.	[placeholder]	rt12328
 
 1705.	[placeholder]	rt12327
